ESLint 구성 + 스타일 모듈 구성

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="리액트 애플리케이션 개발을 위한 원론을 학습합니다." />
     <link rel="icon" href="/favicon.svg" />
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.jsx"></script>
   </head>
 
   <body>
